# arena_space

./: Cargo.toml  README.md
examples/: freighters.rs  sol.rs
src/: action.rs  body.rs  colony.rs  components.rs  constants.rs  construction.rs  entity.rs  ftl.rs  geometry.rs  government.rs  lib.rs  nation.rs  spaceport.rs  star.rs  state.rs  system_state.rs  systems.rs  time.rs
src/body/: components.rs  mod.rs
src/colony/: economy.rs  food_consumption.rs  food_production.rs  mod.rs  population.rs
src/components/: accel.rs  angle.rs  area.rs  credits.rs  economy.rs  ema.rs  energy.rs  force.rs  fraction.rs  length.rs  macros.rs  mass.rs  mass_rate.rs  mod.rs  orbit.rs  pixel.rs  population.rs  position.rs  power.rs  speed.rs  temperature.rs  test.rs  tests.rs  time.rs
src/components/economy/: credits.rs  facility.rs  mod.rs  resource.rs  test.rs
src/macros/: array_enum.rs  component_array.rs  component_map.rs  mod.rs  scalar.rs  scalar_div.rs  scalar_squared.rs  vector.rs  vector_and_scalar.rs
src/resources/: mod.rs  trade.rs
src/ships/: cargo.rs  drives.rs  freighter_assignment.rs  freighter_state.rs  mod.rs  redo.rs  test.rs
src/star/: mod.rs
