[package]
name = "arena_space"
version = "0.1.0"
authors = ["Fraser Balch <farseer.ulwithy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arena_ecs = { path = "C:/Users/Farseer/IdeaProjects/arena_ecs" }
fnv = "1.0"
paste = "1.0"
rand = "0.7"
time = "0.2"
chrono = "0.4"
num-traits = "0.2"
num-format = "0.4"
