[package]
name = "arena_space"
version = "0.1.0"
authors = ["Fraser Balch <farseer.ulwithy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gen_id = { git = "https://github.com/frsrblch/gen_id" }
typed_iter = { git = "https://github.com/frsrblch/typed_iter" }
fnv = "1.0"
paste = "1.0"
rand = "0.7"
time = "0.2"
chrono = "0.4"
num-traits = "0.2"
num-format = "0.4"

[[example]]
name = "sol"