[package]
name = "arena_space"
version = "0.1.0"
authors = ["Fraser Balch <farseer.ulwithy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gen_id = { git = "https://github.com/frsrblch/gen_id" }
gen_id = { path = "C:/Users/Farseer/IdeaProjects/gen_id" }
iter_context = { git = "https://github.com/frsrblch/iter_context" }
fxhash = "0.2.1"
paste = "1.0"
rand = "0.7"
wyhash = "0.4"
chrono = "0.4"
num-format = "0.4"

[[example]]
name = "freighters"